# kindling

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: release.yml
direnv/: use_kindling.sh
docs/: convergence-bootstrap.md  portao-fleet.example.yaml
module/: default.nix  nixos.nix
proto/: kindling.proto
scripts/: bootstrap.sh
src/: client.rs  config.rs  direnv_setup.rs  main.rs  nix.rs  platform.rs  server.rs  tend_setup.rs  tools.rs
src/api/: graphql.rs  rest.rs
src/commands/: ami_build.rs  ami_integration_test.rs  ami_test.rs  apply.rs  bootstrap.rs  check.rs  daemon.rs  ensure.rs  fleet.rs  harden.rs  init.rs  install.rs  mod.rs  pki.rs  profile.rs  query.rs  report.rs  server.rs  uninstall.rs  vpn.rs
src/domain/: mod.rs  nix_service.rs  node.rs  node_report.rs  node_service.rs  report_collector.rs  report_store.rs  types.rs
src/grpc/: mod.rs  server.rs
src/harden/: mod.rs  primitive.rs  profile.rs  runner.rs
src/harden/primitives/: audit.rs  fs.rs  kernel.rs  minimize.rs  mod.rs  network.rs  scrub.rs
src/node_identity/: mod.rs  nix_gen.rs
src/server/: bootstrap.rs  cluster_config.rs  cluster_config_tests.rs  daemon.rs  health.rs  kubeadm.rs  mod.rs  persistent_state.rs  wireguard_fast.rs
src/telemetry/: mod.rs  vector.rs
src/vpn/: keygen.rs  mod.rs  portao_bootstrap.rs  portao_fleet.rs  validate.rs
