[package]
name = "pleme-kindling"
version = "0.3.0"
edition = "2021"
description = "Cross-platform unattended Nix installer and daemon with direnv integration"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/kindling"
homepage = "https://github.com/pleme-io/kindling"
readme = "README.md"
keywords = ["nix", "installer", "direnv", "daemon", "devops"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["module/", "proto/", "target/", "result-*", "Cargo.nix", "flake.*"]

[[bin]]
name = "kindling"
path = "src/main.rs"

[features]
default = []
grpc = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:tonic-build"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["yaml", "env"] }
colored = "2.1"
semver = { version = "1.0", features = ["serde"] }
dirs = "6.0"
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Graceful shutdown (SIGTERM/SIGINT coordinator shared across pleme-io daemons)
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }

# App bootstrap: tracing-subscriber JSON init, config loading, runtime helpers
shidou = { git = "https://github.com/pleme-io/shidou" }

# HTTP server
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# GraphQL
async-graphql = { version = "7.0", features = ["tracing", "chrono"] }
async-graphql-axum = "7.0"

# HTTP client (telemetry + IMDSv2)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# AWS SDK — for the PersistentStateAttached bootstrap phase
# (discover-by-tag + attach EBS volume on AWS-NixOS k3s control
# planes). Pulled in unconditionally so the same binary boots every
# pangea-kubernetes-provisioned cluster; on non-AWS backends the
# phase short-circuits before any AWS call.
aws-config = { version = "1.5", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.55", default-features = false, features = ["rt-tokio", "rustls", "behavior-version-latest"] }

# Hashing
sha2 = "0.10"

# VPN key generation (WireGuard x25519)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.9"
base64 = "0.22"

# Serialization + logging
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"

# gRPC (optional)
tonic = { version = "0.12", features = ["transport"], optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
